# yad2-scraper

./: .gitattributes  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
tests/: conftest.py  test__init__.py  test_category.py  test_next_data.py  test_query.py  test_scraper.py  test_utils.py
tests/data/: cars_category.html
tests/vehicles/: conftest.py  test_category.py  test_next_data.py  test_query.py  test_tag.py  test_urls.py
yad2_scraper/: __init__.py  category.py  constants.py  exceptions.py  next_data.py  query.py  scraper.py  utils.py
yad2_scraper/vehicles/: __init__.py  category.py  next_data.py  query.py  tag.py  urls.py
